--- a/index.html
+++ b/index.html
@@ -393,10 +393,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="form-foot-block">
+                <p class="form-footer-title">Subscribe</p>
+                <form class="footer-form">
+                    <input class="footer-input" type="email" placeholder="E-mail" name="user_email" required>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <div>
+                            <svg class="icon-fly" width="24" height="24">
+                                <use href="./images/icon.svg#icon-fly"></use>
+                            </svg>
+                        </div>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 
-    <!-- Modal winfow-->
+    <!-- Modal window-->
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
@@ -405,8 +418,57 @@
                     <use href="./images/icon.svg#icon-close"></use>
                 </svg>
             </button>
+            <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <label class="input-icons">
+                    <span class="modal-title-decor">Name</span>
+                    <div class="input-modal-icon">
+                        <input type="text" class="modal-input" placeholder="" name="user_name" required minlength="2"
+                            pattern="^[A-Za-zА-Яа-яІіЇї]+$">
+                        <svg class="input-icon" width="18" height="24">
+                            <use href="./images/icon.svg#icon-person"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label>
+                    <span class="modal-title-decor">Phone</span>
+                    <div class="input-modal-icon">
+                        <input type="tel" class="modal-input" placeholder="" name="user_phone" required>
+                        <svg class="input-icon" width="18" height="24">
+                            <use href="./images/icon.svg#icon-phone"></use>
+                        </svg>
+                    </div>
+                </label>
+                <label>
+                    <span class="modal-title-decor">Email</span>
+                    <div class="input-modal-icon">
+                        <input type="email" class="modal-input" placeholder="" name="user_email" required>
+                        <svg class="input-icon" width="18" height="24">
+                            <use href="./images/icon.svg#icon-email"></use>
+                        </svg>
+                    </div>
+                </label>
+
+                <label>
+                    <span class="modal-title-decor">Comment</span>
+                    <textarea class="input-area" placeholder="Text input" name="user_comment"></textarea>
+                </label>
+
+                <div class="modal-check">
+                    <input id="user-polisy" type="checkbox" class="" value="Privacy Policy">
+                    <label for="user-polisy" class="privacy-text">I accept the terms and conditions of the <span><a
+                                href="">Privacy
+                                Policy</a></span></label>
+                </div>
+                <button class="modal-btn" type="submit">Send</button>
+            </form>
         </div>
+
+
+
     </div>
+
+
 
     <script src="./js/modal.js"></script>
 </body>
