--- a/portfolio.html
+++ b/portfolio.html
@@ -240,7 +240,21 @@
                     </li>
                 </ul>
             </div>
+            <div class="form-foot-block">
+                <p class="form-footer-title">Subscribe</p>
+                <form class="footer-form">
+                    <input class="footer-input" type="email" placeholder="E-mail" name="user_email" required>
+                    <button class="footer-btn" type="submit">Subscribe
+                        <div>
+                            <svg class="icon-fly" width="24" height="24">
+                                <use href="./images/icon.svg#icon-fly"></use>
+                            </svg>
+                        </div>
+                    </button>
+                </form>
+            </div>
         </div>
+
     </footer>
 
 
