--- a/index.html
+++ b/index.html
@@ -454,12 +454,12 @@
                     <textarea class="input-area" placeholder="Text input" name="user_comment"></textarea>
                 </label>
 
-                <div class="modal-check">
-                    <input id="user-polisy" type="checkbox" class="" value="Privacy Policy">
-                    <label for="user-polisy" class="privacy-text">I accept the terms and conditions of the <span><a
-                                href="">Privacy
-                                Policy</a></span></label>
-                </div>
+                <!-- Privacy Policy-->
+
+                <input class="form-check visually-hidden" type="checkbox" name="accept" value="accept" id="user-policy">
+                <label class="form-check-desc" for="user-policy">
+                    I accept the terms and conditions of the &nbsp;<a href="">Privacy Policy</a>
+                </label>
                 <button class="modal-btn" type="submit">Send</button>
             </form>
         </div>
