--- a/index.html
+++ b/index.html
@@ -398,11 +398,9 @@
                 <form class="footer-form">
                     <input class="footer-input" type="email" placeholder="E-mail" name="user_email" required>
                     <button class="footer-btn" type="submit">Subscribe
-                        <div>
-                            <svg class="icon-fly" width="24" height="24">
-                                <use href="./images/icon.svg#icon-fly"></use>
-                            </svg>
-                        </div>
+                        <svg class="icon-fly" width="24" height="24">
+                            <use href="./images/icon.svg#icon-fly"></use>
+                        </svg>
                     </button>
                 </form>
             </div>
@@ -430,7 +428,7 @@
                         </svg>
                     </div>
                 </label>
-                <label>
+                <label class="input-icons">
                     <span class="modal-title-decor">Phone</span>
                     <div class="input-modal-icon">
                         <input type="tel" class="modal-input" placeholder="" name="user_phone" required>
@@ -439,7 +437,7 @@
                         </svg>
                     </div>
                 </label>
-                <label>
+                <label class="input-icons">
                     <span class="modal-title-decor">Email</span>
                     <div class="input-modal-icon">
                         <input type="email" class="modal-input" placeholder="" name="user_email" required>
@@ -449,7 +447,7 @@
                     </div>
                 </label>
 
-                <label>
+                <label class="area-block">
                     <span class="modal-title-decor">Comment</span>
                     <textarea class="input-area" placeholder="Text input" name="user_comment"></textarea>
                 </label>
@@ -458,7 +456,7 @@
 
                 <input class="form-check visually-hidden" type="checkbox" name="accept" value="accept" id="user-policy">
                 <label class="form-check-desc" for="user-policy">
-                    I accept the terms and conditions of the &nbsp;<a href="">Privacy Policy</a>
+                    I accept the terms and conditions of the &nbsp;<a class="privacy-color" href="">Privacy Policy</a>
                 </label>
                 <button class="modal-btn" type="submit">Send</button>
             </form>
